text-align fix

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -24,6 +24,7 @@ body {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+    text-align: center;
 }
 .center {
     width: 100%;
@@ -33,14 +34,12 @@ body {
 }
 .title {
     font-family: "Montserrat", sans-serif;
-    text-align: center;
     color: #fff;
     font-size: 15pt;
     font-style: bold;
 }
 .text {
     font-family: "Montserrat", sans-serif;
-    text-align: center;
     color: #949392;
     font-size: 10pt;
     font-style: normal;
